2008-06-03  Aaron Bockover  <abock@gnome.org>

	* src/Clients/Halie/Halie/Client.cs: Translate a few query fields to be
	more familiar, allow setting volume and seeking, support window hiding

	* src/Clients/Nereid/Nereid/Client.cs: Added --help and --version displays

	* src/Core/Banshee.ThickClient/Banshee.Gui/IClientWindow.cs: Added Hide ()
	
	* src/Libraries/Hyena/Hyena.Collections/CollectionExtensions.cs: Added
	some Join methods

	* src/Libraries/Hyena/Hyena.CommandLine/Layout.cs: Support displaying
	specific sets of groups

	* src/Libraries/Hyena/Hyena.CommandLine/CommandLineParser.cs: Added a
	ContainsStart method

	* src/Libraries/Hyena/Hyena.CommandLine/LayoutGroup.cs: Added index support

2008-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs:
	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtService.cs: And
	recommit the patch, now that Aaron approves. :)

2008-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs:
	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtService.cs:
	Revert last commit, apparently abock has some grand plans he didn't tell
	me about.

2008-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs:
	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtService.cs: Add
	a CoverArtDownloads table to keep track of when we last tried to download
	cover art for an album and if we were successful.  With this information,
	we can avoid trying to download artwork for an album more than once a
	week.  Fixes BGO #535988.  Should also fix issue with the cover art job
	saying it's at 100% while it keeps going for many more minutes.

2008-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellFileSize.cs:
	Avoid NRE, fix BGO #536148.

2008-06-03  Jordi Mas <jmas@softcatala.org>
